# carrots

./: pyproject.toml  tags.txt
carrots/parse/ctags/: __init__.py  parse.py
carrots/schema/: __init__.py  base.py  enums.py
carrots/schema/tags/: __init__.py  class_.py  function.py  member.py  variable.py
