[tool.poetry]
name = "carrots"
version = "0.1.0"
description = "Library for providing language models with code vission"
authors = ["Carlos Fernandez <carlos.ferlo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
